# Nayabot_Core

./: .gitignore  Cargo.toml  README.md  build.rs
lib/: sqlite3.lib
src/: bot.rs  botwebsocket.rs  error.rs  event.rs  funs.rs  lib.rs  main.rs  message.rs
src/modules/: log.rs  mod.rs
