[package]
name = "NayaCore"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
colored="2.1"
chrono="0.4.38"
tokio={version="1.40",features = ["full"]}
reqwest={version="0.12",features = ["json"]}
tungstenite="*"

[lib]
name="Nayabot_Core"